added too much css, for practice

--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qizz Guy</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h2 class="page-title">Quizz Guy</h2>
+        <p>This is my quizz guy</p>
+    </header>
+    <main class="page-content">
+        <section class="quiz-wrapper">
+            <h2 class="quiz-title">This is a quiz</h2>
+            <ul class="quiz">
+                <h1 id="Question">This is where my Qs should appear...</h1>
+                <li class="quiz-opt opt-1">empty slot</li>
+
+                <li class="quiz-opt opt-2">empty slot</li>
+
+                <li class="quiz-opt opt-3">empty slot</li>
+
+                <li class="quiz-opt opt-4">empty slot</li>
+
+            </ul>
+        </section>
+
+    </main>
+    <footer>Made by CRSPN</footer>
 </body>
 </html>
