added button obj/funtioning as questions

--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
             <h2 class="quiz-title">This is a quiz</h2>
             <ul class="quiz">
                 <h1 id="Question">This is where my Qs should appear...</h1>
-                <li class="quiz-opt opt-1">empty slot</li>
-
-                <li class="quiz-opt opt-2">empty slot</li>
-
-                <li class="quiz-opt opt-3">empty slot</li>
-
-                <li class="quiz-opt opt-4">empty slot</li>
-
+                <button class="btn" id="answer-a" type="answer">Answer button</button>
+                <button class="btn" id="answer-b" type="answer">Answer button</button>
+                <button class="btn" id="answer-c" type="answer">Answer button</button>
+                <button class="btn" id="answer-d" type="answer">Answer button</button>
             </ul>
+            <script src="./assets/js/script.js">
+            </script>
         </section>
 
     </main>
