--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header>
         <h2 class="page-title">Quizz Guy</h2>
         <p>This is my quizz guy</p>
+        <ul>
+            <li class="stats" id="PlName" type="player"></li>
+            <li class="stats" id="PlTimeLeft" type="clock"></li>
+
+        </ul>
     </header>
     <main class="page-content">
         <section class="quiz-wrapper">
