reaserched js methods

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <button class="btn" id="answer-c" type="answer">Answer button</button>
                 <button class="btn" id="answer-d" type="answer">Answer button</button>
             </ul>
-            <script src="./assets/js/script.js">
-            </script>
+            
         </section>
 
     </main>
     <footer>Made by CRSPN</footer>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
