one last not so valiant effort

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="page-content">
         <section class="quiz-wrapper">
             <h2 class="quiz-title">This is a quiz</h2>
-            <ul class="quiz">
+            <ul class="quiz hide">
                 <h1 id="Question">This is where my Qs should appear...</h1>
                 <button class="btn" id="answer-a" type="answer">Answer button</button>
                 <button class="btn" id="answer-b" type="answer">Answer button</button>
